Lower subtree (treeMode=1) pullTree optimisation various cleanups/improvements

--- a/bin/example.conf
+++ b/bin/example.conf
@@ -14,7 +14,7 @@
 
 
 # Modify the appearance of your info box
-# To disable the box, set both text size parameters and the width and height to 0
+# To disable the box, set both text size parameters and the width+height to 0
 # Use | as newline in the infoBoxText
 infoBoxTitle = Title
 infoBoxTitleSize = 16
@@ -27,6 +27,11 @@ infoBoxX = 10
 infoBoxY = 90
 infoBoxWidth = 140
 infoBoxHeight = 55
+
+# The layout of the tree
+# 0 = branch to both sides
+# 1 = branch only to one side
+treeMode = 0
 
 # Chose: 0=don't presort, 1=by name, 2=by date
 sortKey = 0
