Corrected vertical alignment for derivation lines/markers. Improved tree reach optimisation for single roots. Implemented connector markers. New options: descriptionIsHyperLink, treeSpacingBiggerThan, connectorDots

--- a/bin/example.conf
+++ b/bin/example.conf
@@ -39,8 +39,11 @@ sortKey = 0
 # Set between 0 and 100
 optimise = 99
 
-# How many offsets to add before/after trees
+# How much space (in offsets) to add before/after trees
 treeSpacing = 1
+
+# How big (total leaf nodes) a tree has to be before it gets spacing
+treeSpacingBiggerThan = 5
 
 # Background color in hexadecimal RGB (#abc or #abcdef)
 mainBackground = #fff
@@ -86,6 +89,9 @@ derivType = 0
 # The size of the node dots
 dotRadius = 10
 smallDotRadius = 5
+
+# Adds small half-circles to connector starting points
+connectorDots = 1
 
 # Set to 1 if the connectors should have a dashed stroke
 # 0 for a full line
