--- a/bin/example.conf
+++ b/bin/example.conf
@@ -15,7 +15,7 @@
 
 # Modify the appearance of your info box
 # To disable the box, set both text size parameters and the width+height to 0
-# Use | as newline in the infoBoxText
+# Use | as newline in the infoBoxTitle and infoBoxText
 infoBoxTitle = Title
 infoBoxTitleSize = 16
 infoBoxText = Lorem ipsum dolor sit amet,|consectetuer adipiscing elit
