feature: include external SVG images feature: font correction factor improved infobox handling function: str2double code cleanup

--- a/bin/example.conf
+++ b/bin/example.conf
@@ -20,7 +20,7 @@ infoBoxTitle = Title
 infoBoxTitleSize = 16
 infoBoxText = Lorem ipsum dolor sit amet,|consectetuer adipiscing elit
 infoBoxTextSize = 10
-infoBoxFont = Arial
+infoBoxFont = Liberation Sans, Arial, Helvetica
 infoBoxColor1 = #5bf
 infoBoxColor2 = #38f
 infoBoxX = 10
@@ -73,13 +73,19 @@ stopSpacing = 0.1.0
 yearPX = 100
 
 # Customise the labels on the nodes
-labelFont = Arial
+labelFont = Liberation Sans, Arial, Helvetica
 labelFontSize = 12
 labelFontColor = #000
 
-# labelBackground is an experimental feature you might want to
-# use with derivType = 1
-# It DOES NOT work well with SVG 1.1 output (hoping for 1.2...)
+# Correction factor for font pixel width/height.
+# It is normalised for Liberation Sans (= Arial) and will
+# affect the alignment of all text in your output.
+# Since this one setting affects all text instances, it's
+# recommended to use "similarly spaced" fonts throughout your settings.
+fontCorrectionFactor = 1.0
+
+# An experimental feature you might want to use with derivType = 1
+# It DOES NOT work flawlessly with SVG 1.1 output (hoping for v1.2 ...)
 labelBackground = 0
 
 # How the lines should derive from the parent
@@ -101,7 +107,7 @@ connectorsDashed = 1
 yearLinePX = 40
 yearLineColor1 = #037
 yearLineColor2 = #37d
-yearLineFont = Arial
+yearLineFont = Liberation Sans, Arial, Helvetica
 yearLineFontSize = 28
 yearLineFontColor = #fff
 
