fixed: generatorSVG now produces valid XML fixed: various SVG display properties fixed: SVG inclusion feature: infoBoxFontColor improved: titleBoxText

--- a/example/example.conf
+++ b/example/example.conf
@@ -15,18 +15,19 @@
 
 # Modify the appearance of your info box
 # To disable the box, set both text size parameters and the width+height to 0
-# Use | as newline in the infoBoxTitle and infoBoxText
 infoBoxTitle = Title
-infoBoxTitleSize = 16
-infoBoxText = Lorem ipsum dolor sit amet,|consectetuer adipiscing elit
-infoBoxTextSize = 10
+infoBoxTitleSize = 18
+infoBoxText = Lorem ipsum dolor sit amet,
+infoBoxText = consectetuer adipiscing elit
+infoBoxTextSize = 12
 infoBoxFont = Liberation Sans, Arial, Helvetica
+infoBoxFontColor = #000
 infoBoxColor1 = #5bf
 infoBoxColor2 = #38f
 infoBoxX = 10
-infoBoxY = 88
-infoBoxWidth = 140
-infoBoxHeight = 45
+infoBoxY = 95
+infoBoxWidth = 166
+infoBoxHeight = 60
 
 # The layout of the tree
 # 0 = branch to both sides
@@ -43,7 +44,7 @@ optimise = 99
 treeSpacing = 1
 
 # How big (total leaf nodes) a tree has to be before it gets spacing
-treeSpacingBiggerThan = 5
+treeSpacingBiggerThan = 1
 
 # Background color in hexadecimal RGB (#abc or #abcdef)
 mainBackground = #fff
@@ -86,7 +87,7 @@ fontCorrectionFactor = 1.0
 
 # An experimental feature you might want to use with derivType = 1
 # It DOES NOT work flawlessly with SVG 1.1 output (hoping for v1.2 ...)
-labelBackground = 0
+labelBackground = 1
 
 # How the lines should derive from the parent
 # 0=orthogonal, 1=from parent's starting point
