feature: CSV generator feature: nameChangeType feature: dotType feature: invers lower tree generation implemented: color constructors hex <-> rgb implemented: removal of GCT implemented: correct inkscape/sodipodi namespace headers fixed: infobox text font-size placement fixed: removed PNG from supported versions confirmed: works with minus years

--- a/example/example.conf
+++ b/example/example.conf
@@ -31,7 +31,8 @@ infoBoxHeight = 60
 
 # The layout of the tree
 # 0 = branch to both sides
-# 1 = branch only to one side
+# 1 = branch only on lower side
+# 2 = branch only on lower side, inverse (good for CSV output)
 treeMode = 0
 
 # Chose: 0=don't presort, 1=by name, 2=by date
@@ -89,6 +90,11 @@ fontCorrectionFactor = 1.0
 # It DOES NOT work flawlessly with SVG 1.1 output (hoping for v1.2 ...)
 labelBackground = 1
 
+# Useful if you want to use the renames only as version bumps
+# 0=rename above the dot to the right, like the first name
+# 1=rename centered within dot
+nameChangeType = 0
+
 # How the lines should derive from the parent
 # 0=orthogonal, 1=from parent's starting point
 derivType = 0
@@ -96,6 +102,11 @@ derivType = 0
 # The size of the node dots
 dotRadius = 10
 smallDotRadius = 5
+
+# Determines how the dots look like
+# 0=full dots, 1=circles
+# Might be useful together with renameType = 1
+dotType = 0
 
 # Adds small half-circles to connector starting points
 connectorDots = 1
