--- a/example/example.conf
+++ b/example/example.conf
@@ -14,7 +14,8 @@
 
 
 # Modify the appearance of your info box
-# To disable the box, set both text size parameters and the width+height to 0
+# To disable the box:
+# Set both font size parameters to 0, set the width and height to 0
 infoBoxTitle = Title
 infoBoxTitleSize = 18
 infoBoxText = Lorem ipsum dolor sit amet,
@@ -29,6 +30,18 @@ infoBoxY = 95
 infoBoxWidth = 166
 infoBoxHeight = 60
 
+# Correction factor for font pixel width/height.
+# It is normalised for Liberation Sans (= Arial) and will
+# affect the alignment of all text in your output.
+# Since this one setting affects all text instances, it's
+# recommended to use "similarly spaced" fonts throughout your settings.
+fontCorrectionFactor = 1.0
+
+# Orientation of the timeline
+# 0 = left to right, 1 = top to bottom
+# 2 = right to left, 3 = bottom to top
+orientation = 0
+
 # The layout of the tree
 # 0 = branch to both sides
 # 1 = branch only on lower side
@@ -38,7 +51,9 @@ treeMode = 0
 # Chose: 0=don't presort, 1=by name, 2=by date
 sortKey = 0
 
-# Set between 0 and 100
+# Set between 0 and 99
+# The first digit refers to the optimisation for isolated nodes.
+# The second digit refers to the optimisation for trees.
 optimise = 99
 
 # How much space (in offsets) to add before/after trees
@@ -74,38 +89,31 @@ stopSpacing = 0.1.0
 # How many pixels a year should have
 yearPX = 100
 
-# Customise the labels on the nodes
+# Customise the node labels
 labelFont = Liberation Sans, Arial, Helvetica
 labelFontSize = 12
 labelFontColor = #000
 
-# Correction factor for font pixel width/height.
-# It is normalised for Liberation Sans (= Arial) and will
-# affect the alignment of all text in your output.
-# Since this one setting affects all text instances, it's
-# recommended to use "similarly spaced" fonts throughout your settings.
-fontCorrectionFactor = 1.0
-
 # An experimental feature you might want to use with derivType = 1
-# It DOES NOT work flawlessly with SVG 1.1 output (hoping for v1.2 ...)
+# It DOES NOT work flawlessly with SVG 1.1 output (hoping for v1.2 or CSS3 ...)
 labelBackground = 1
 
 # Useful if you want to use the renames only as version bumps
-# 0=rename above the dot to the right, like the first name
-# 1=rename centered within dot
+# 0 = rename above the dot to the right, like the first name
+# 1 = rename centered within dot
 nameChangeType = 0
 
 # How the lines should derive from the parent
-# 0=orthogonal, 1=from parent's starting point
+# 0 = orthogonal, 1 = from parent's starting point
 derivType = 0
 
 # The size of the node dots
 dotRadius = 10
 smallDotRadius = 5
 
-# Determines how the dots look like
-# 0=full dots, 1=circles
-# Might be useful together with renameType = 1
+# Determines how the dots look
+# 0 = full dots, 1 = circles
+# Circles might be useful together with nameChangeType = 1
 dotType = 0
 
 # Adds small half-circles to connector starting points
@@ -123,14 +131,14 @@ yearLineFont = Liberation Sans, Arial, Helvetica
 yearLineFontSize = 28
 yearLineFontColor = #fff
 
-# Remember to change your data too after changing these averages:
+# Remember to adjust your input data after changing these averages:
 daysInMonth = 30
 monthsInYear = 12
 #endOfTime = 2012.12
 
 # Set to 1 if the description should be used as a web link
-descriptionIsHyperLink = 0
+descriptionIsHyperLink = 1
 
-# Show debug information
-# 0=off, 1=on
+# Show debug information when running gnuclad
+# 0 = off, 1 = on
 debug = 0
