feature: honors "-v", "--version", "-h", "--help" feature: monthset/dayset switches feature: label background opacity (labelBGOpacity) feature: can now specify output file name fixed: Date2str returns truncated string based on setbits fixed: folder delimiter abstraction fixed: getExt ignores possible folder delimiters implemented: rgb2hexHue implemented: hex2rgbHue improved: README code cleanup

--- a/example/example.conf
+++ b/example/example.conf
@@ -95,8 +95,9 @@ labelFontSize = 12
 labelFontColor = #000
 
 # An experimental feature you might want to use with derivType = 1
+# Opacity takes values between 0 (transparent) and 100 (opaque)
 # It DOES NOT work flawlessly with SVG 1.1 output (hoping for v1.2 or CSS3 ...)
-labelBackground = 1
+labelBGOpacity = 50
 
 # Useful if you want to use the renames only as version bumps
 # 0 = rename above the dot to the right, like the first name
