feature: greatly improved build system feature: Makefile improvements (conditional target prerequisites) feature: install/uninstall on POSIX feature: improved manual file cleanup throughout the project code cleanup

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,23 +1,10 @@
 .PHONY: all debug clean
-HEADERS=$(wildcard *.h)
-SOURCES=$(wildcard *.cpp)
-OBJS=$(wildcard *.o)
-BINS=$(SOURCES:.cpp=)
-BIN=../bin/gnuclad
-CC = g++
-CFLAGS = -Wall -Wextra -Werror -pedantic-errors -ansi -O2
-DBGFLAGS = -Wall -Wextra -Werror -pedantic-errors -ansi -O0 -g3
 
-$(BIN): $(SOURCES) $(HEADERS)
-	$(CC) $(CFLAGS) -o $(BIN) $(SOURCES)
+all:
+	cd .. && $(MAKE)
 
-all: $(SOURCES) $(HEADERS)
-	$(CC) $(CFLAGS) -o $(BIN) $(SOURCES)
-
-debug: $(SOURCES) $(HEADERS)
-	$(CC) $(DBGFLAGS) -o $(BIN)-dbg $(SOURCES)
+debug:
+	cd .. && $(MAKE) debug
 
 clean:
-	rm $(BIN)
-	rm -f $(BINS)
-	rm -f $(OBJS)
+	cd .. && $(MAKE) clean
