--- a/example/example.conf
+++ b/example/example.conf
@@ -1,5 +1,10 @@
 # gnuclad example config file
-# For a detailed explanation, consult the texinfo manual
+# gnuclad has more than 50 configuration options, of
+# which only a few are listed here.
+# For a detailed explanation, consult the included manual.
+# You can always generate a full configuration file by
+# specifying CONF as gnuclad's output.
+
 
 # If you comment or delete an option,
 # gnuclad will use the built-in defaults.
@@ -14,26 +19,14 @@
 
 
 infoBoxTitle = Title
-infoBoxTitleSize = 18
 infoBoxText = Lorem ipsum dolor sit amet,
 infoBoxText = consectetuer adipiscing elit
-infoBoxTextSize = 12
-infoBoxFont = Liberation Sans, Arial, Helvetica
-infoBoxFontColor = #000
-infoBoxColor1 = #5bf
-infoBoxColor2 = #38f
-infoBoxX = 10
-infoBoxY = 95
-infoBoxWidth = 166
-infoBoxHeight = 60
 
-fontCorrectionFactor = 1.0
+# orientation goes from 0 to 3
 orientation = 0
+
+#treemode goes from 0 to 2
 treeMode = 0
-sortKey = 0
-optimise = 99
-treeSpacing = 1
-treeSpacingBiggerThan = 1
 
 mainBackground = #fff
 rulerWidth = 2
@@ -43,35 +36,17 @@ rulerMonthColor = #eaeaea
 
 lineWidth = 4
 offsetPX = 20
-stopFadeOutPX = 30
-stopSpacing = 0.1.0
 yearPX = 100
 
-labelFont = Liberation Sans, Arial, Helvetica
-labelFontSize = 12
 labelFontColor = #000
 labelBGOpacity = 50
+
+#nameChangeType can be 0 or 1
 nameChangeType = 0
 
+#derivType can be 0 or 1
 derivType = 0
 dotRadius = 10
 smallDotRadius = 5
-dotType = 0
-
-connectorDots = 1
-connectorsDashed = 1
-
-yearLinePX = 40
-yearLineColor1 = #037
-yearLineColor2 = #37d
-yearLineFont = Liberation Sans, Arial, Helvetica
-yearLineFontSize = 28
-yearLineFontColor = #fff
-
-daysInMonth = 30
-monthsInYear = 12
-#endOfTime = 2012.12
 
 descriptionIsHyperLink = 1
-
-debug = 0
