implemented: better validxml() algorithm implemented: descriptionType (formerly hyperlink) improved: default config options code cleanup fixed: manual typos implemented: manual cross references added: example.conf example2.conf improved: included example images

--- a/EXAMPLE/example2.conf
+++ b/EXAMPLE/example2.conf
@@ -21,32 +21,25 @@
 infoBoxTitle = Title
 infoBoxText = Lorem ipsum dolor sit amet,
 infoBoxText = consectetuer adipiscing elit
+infoBoxX = 50
+infoBoxY = 45
+infoBoxWidth = 166
+infoBoxHeight = 60
 
 # orientation goes from 0 to 3
-orientation = 0
+orientation = 1
 
-#treemode goes from 0 to 2
-treeMode = 0
-
-mainBackground = #fff
-rulerWidth = 2
+mainBackground = #fafafa
+rulerWidth = 3
 rulerColor = #ddd
-rulerMonthWidth = 1
-rulerMonthColor = #eaeaea
+rulerMonthWidth = 0
 
-lineWidth = 4
-offsetPX = 20
-yearPX = 100
+offsetPX = 50
 
-labelFontColor = #000
+labelFontColor = #010
 labelBGOpacity = 50
 
-#nameChangeType can be 0 or 1
-nameChangeType = 0
-
 #derivType can be 0 or 1
-derivType = 0
-dotRadius = 10
-smallDotRadius = 5
-
-descriptionIsHyperLink = 1
+derivType = 1
+dotRadius = 6
+smallDotRadius = 4
