added: gnuclad-usage.texi improved: INSTALL

--- a/src/Makefile
+++ b/src/Makefile
@@ -106,15 +106,15 @@ OBJEXT = o
 PACKAGE = gnuclad
 PACKAGE_BUGREPORT = bryonak at dyx dot ch
 PACKAGE_NAME = gnuclad
-PACKAGE_STRING = gnuclad 0.1
+PACKAGE_STRING = gnuclad 0.1.x
 PACKAGE_TARNAME = gnuclad
 PACKAGE_URL = 
-PACKAGE_VERSION = 0.1
+PACKAGE_VERSION = 0.1.x
 PATH_SEPARATOR = :
 SET_MAKE = 
 SHELL = /bin/bash
 STRIP = 
-VERSION = 0.1
+VERSION = 0.1.x
 abs_builddir = /home/bryonak/c/gnuclad/bryonak/src
 abs_srcdir = /home/bryonak/c/gnuclad/bryonak/src
 abs_top_builddir = /home/bryonak/c/gnuclad/bryonak
