added small copyright notice to all supporting files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,11 @@
+# Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
+#
+# Copying and distribution of this file, with or without modification,
+# are permitted in any medium without royalty provided the copyright
+# notice and this notice are preserved.  This file is offered as-is,
+# without any warranty.
+
+
 bin_PROGRAMS = gnuclad
 gnuclad_SOURCES = gnuclad.h gnuclad-portability.h\
                   gnuclad.cpp gnuclad-helpers.cpp gnuclad-cladogram.cpp\
