--- a/manual/Makefile.am
+++ b/manual/Makefile.am
@@ -1,3 +1,10 @@
+# Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
+#
+# Copying and distribution of this file, with or without modification,
+# are permitted in any medium without royalty provided the copyright
+# notice and this notice are preserved.  This file is offered as-is,
+# without any warranty.
+
 info_TEXINFOS = src/gnuclad.texi
 hello_TEXINFOS = src/gnuclad-about.texi\
 	src/gnuclad-config.texi\
