--- a/Makefile.in
+++ b/Makefile.in
@@ -194,7 +194,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src doc
+SUBDIRS = src doc/src
 EXTRA_DIST = example
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
