moved parsers to src/parser and generators to src/generator configure.ac: added subdir-objects fixed typos in manual

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_PREREQ(2.54)
 AC_CONFIG_AUX_DIR([build-aux])
 
 AC_INIT([gnuclad],[0.1.x],[bryonak at dyx dot ch])
-AM_INIT_AUTOMAKE([-Wall])
+AM_INIT_AUTOMAKE([-Wall subdir-objects])
 
 AC_CONFIG_SRCDIR([src/gnuclad.cpp])
 AC_CONFIG_MACRO_DIR([m4])
