--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,10 +8,11 @@
 
 bin_PROGRAMS = gnuclad
 gnuclad_SOURCES = gnuclad.h gnuclad-portability.h\
-                  gnuclad.cpp gnuclad-helpers.cpp gnuclad-cladogram.cpp\
-                  generatorCONF.h generatorCONF.cpp\
-                  generatorCSV.h generatorCSV.cpp\
-                  generatorPNG.h generatorPNG.cpp\
-                  generatorSVG.h generatorSVG.cpp\
-                  parserCSV.h parserCSV.cpp
+                  gnuclad.cpp gnuclad-cladogram.cpp gnuclad-helpers.cpp\
+                  parser/csv.h parser/csv.cpp\
+                  generator/csv.h generator/csv.cpp\
+                  generator/svg.h generator/svg.cpp\
+                  generator/conf.h generator/conf.cpp\
+                  generator/png.h generator/png.cpp
+
 gnuclad_CPPFLAGS = -Wall -Wextra -Werror -pedantic-errors -ansi -O2
