src/generator/svg.cpp: implemented out of boundaries infobox turned off default cflags

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,4 +16,6 @@ gnuclad_SOURCES = gnuclad.h gnuclad-portability.h\
                   generator/conf.h generator/conf.cpp\
                   generator/png.h generator/png.cpp
 
+CFLAGS =
+CXXFLAGS =
 gnuclad_CPPFLAGS = -Wall -Wextra -Werror -pedantic-errors -ansi -O2
