src/parser/dir.cpp: improved parsing, still experimental src/generator/conf.cpp: added dir_showDotDirs src/generator/svg.cpp: added clad->gnuclad_version                                    rounded main background corners src/gnuclad-cladogram.cpp: added truncateFolder, inVitro, dir_showDotDirs                                            added node->size < treeSpacingBiggerThan warning                                            print full source => dest names src/gnuclad.h: added truncateFolder, inVitro, dir_showDotDirs

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,5 +17,5 @@ gnuclad_SOURCES = gnuclad.h gnuclad-portability.h\
                   generator/png.h generator/png.cpp
 
 CFLAGS =
-CXXFLAGS =
+AM_CXXFLAGS =
 gnuclad_CPPFLAGS = -Wall -Wextra -Werror -pedantic-errors -ansi -O2
