--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -92,7 +92,7 @@ CFLAGS =
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
 CXXDEPMODE = @CXXDEPMODE@
-CXXFLAGS = 
+CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
@@ -176,6 +176,7 @@ gnuclad_SOURCES = gnuclad.h gnuclad-portability.h\
                   generator/conf.h generator/conf.cpp\
                   generator/png.h generator/png.cpp
 
+AM_CXXFLAGS = 
 gnuclad_CPPFLAGS = -Wall -Wextra -Werror -pedantic-errors -ansi -O2
 all: all-am
 
