generator/conf.cpp: added asciiStrings                                dir_showDotDirs -> dir_showDotFiles generator/svg.cpp: implemented strlenpx (asciiStrings)                               fixed stop gradients for WebKit (stroke -> style fill)                               less local dirty_hack_ex/em                               add breaks if stopFadeOutPX is 0 parser/dir.cpp: general improvement, working alpha

--- a/example/dir.conf
+++ b/example/dir.conf
@@ -29,7 +29,7 @@ orientation = 0
 #treemode goes from 0 to 2
 treeMode = 0
 
-optimise = 99
+optimise = 12
 
 mainBackground = #fff
 rulerWidth = 2
@@ -41,9 +41,10 @@ yearPX = 300
 
 labelFontColor = #000
 labelBGOpacity = 80
+asciiStrings = 1
 
 dotRadius = 6
 
 descriptionType = 1
 
-dir_showDotDirs = 0
+dir_showDotFiles = 1
