gnuclad-portability.cpp: improved implementation gnuclad.cpp: fixed InputFile on input without extension parser/dir.cpp: using islink()                        implemented stat-ing                        improved readableDir()                        dummy color vars                        general improvement

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,7 @@
 
 
 bin_PROGRAMS = gnuclad
-gnuclad_SOURCES = gnuclad.h gnuclad-portability.h\
+gnuclad_SOURCES = gnuclad.h gnuclad-portability.h gnuclad-portability.cpp\
                   gnuclad.cpp gnuclad-cladogram.cpp gnuclad-helpers.cpp\
                   parser/csv.h parser/csv.cpp\
                   parser/dir.h parser/dir.cpp\
