--- a/example/example.conf
+++ b/example/example.conf
@@ -26,6 +26,9 @@ infoBoxY = 45
 infoBoxWidth = 166
 infoBoxHeight = 60
 
+# use ascii string width heuristics
+asciiStrings = 1
+
 # orientation goes from 0 to 3
 orientation = 0
 
