--- a/example/dir.conf
+++ b/example/dir.conf
@@ -29,7 +29,7 @@ orientation = 0
 #treemode goes from 0 to 2
 treeMode = 0
 
-optimise = 12
+optimise = 99
 
 mainBackground = #fff
 rulerWidth = 2
@@ -43,8 +43,12 @@ labelFontColor = #000
 labelBGOpacity = 80
 asciiStrings = 1
 
+derivType = 4
 dotRadius = 6
 
 descriptionType = 1
 
 dir_showDotFiles = 1
+dir_colorFile = #aaf
+dir_colorDir = #00f
+dir_colorLink = #0f0
