gnuclad.h:     implemented compareParDist     added optimise_weakPullTree, optimise_strongPullTree     added optimise_strictOverlaps gnuclad-cladogram.cpp:     implemented optimise_weakPullTree and optimise_strongPullTree     implemented optimise_strictOverlaps     improved comments parser/dir.cpp:     fixed trailing endOfTime bug for real generator/svg.cpp:     fixed bigParent fadeout for real generator/conf.cpp:     added strictOverlaps

--- a/example/dir.conf
+++ b/example/dir.conf
@@ -29,7 +29,8 @@ orientation = 0
 #treemode goes from 0 to 2
 treeMode = 0
 
-optimise = 99
+optimise = 96
+strictOverlaps = 0
 
 mainBackground = #fff
 rulerWidth = 2
@@ -37,8 +38,9 @@ rulerColor = #ddd
 
 lineWidth = 1
 offsetPX = 20
-yearPX = 250
+yearPX = 220
 
+labelFontSize = 12
 labelFontColor = #000
 labelBGOpacity = 80
 asciiStrings = 1
@@ -48,7 +50,7 @@ dotRadius = 6
 
 descriptionType = 1
 
-dir_showDotFiles = 1
+dir_showDotFiles = 0
 dir_colorFile = #aaf
 dir_colorDir = #00f
 dir_colorLink = #0f0
