generator/conf.cpp:     added missing equals sign manual:     split programming-classes and programming-helpers     improved optimisation chapter     general updates and improvements

--- a/doc/src/Makefile.am
+++ b/doc/src/Makefile.am
@@ -14,6 +14,7 @@ gnuclad_TEXINFOS = gnuclad-about.texi\
 	gnuclad-faq.texi\
 	gnuclad-programming.texi\
 	gnuclad-programming-classes.texi\
+	gnuclad-programming-helpers.texi\
 	gnuclad-programming-config.texi\
 	gnuclad-programming-parser.texi\
 	gnuclad-programming-generator.texi\
