--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -123,15 +123,15 @@ OBJEXT = o
 PACKAGE = gnuclad
 PACKAGE_BUGREPORT = bryonak at dyx dot ch
 PACKAGE_NAME = gnuclad
-PACKAGE_STRING = gnuclad 0.1.x
+PACKAGE_STRING = gnuclad experimental-81
 PACKAGE_TARNAME = gnuclad
 PACKAGE_URL = 
-PACKAGE_VERSION = 0.1.x
+PACKAGE_VERSION = experimental-81
 PATH_SEPARATOR = :
 SET_MAKE = 
 SHELL = /bin/bash
 STRIP = 
-VERSION = 0.1.x
+VERSION = experimental-81
 abs_builddir = /home/bryonak/c/gnuclad/bryonak/doc/src
 abs_srcdir = /home/bryonak/c/gnuclad/bryonak/doc/src
 abs_top_builddir = /home/bryonak/c/gnuclad/bryonak
