added man page doc/man/gnuclad.1

--- a/doc/src/Makefile.am
+++ b/doc/src/Makefile.am
@@ -20,4 +20,4 @@ gnuclad_TEXINFOS = gnuclad-about.texi\
 	gnuclad-programming-generator.texi\
 	fdl.texi
 
-EXTRA_DIST = ../index.html gnuclad.html
+EXTRA_DIST = ../index.html gnuclad.html ../man
