cosmetic changes updated ToDo

--- a/doc/src/Makefile.in
+++ b/doc/src/Makefile.in
@@ -189,7 +189,7 @@ gnuclad_TEXINFOS = gnuclad-about.texi\
 	gnuclad-programming-generator.texi\
 	fdl.texi
 
-EXTRA_DIST = ../index.html gnuclad.html
+EXTRA_DIST = ../index.html gnuclad.html ../man
 all: all-am
 
 .SUFFIXES:
