--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -121,17 +121,17 @@ MAKEINFO = makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = gnuclad
-PACKAGE_BUGREPORT = bryonak at dyx dot ch
+PACKAGE_BUGREPORT = donjan at dyx dot ch
 PACKAGE_NAME = gnuclad
-PACKAGE_STRING = gnuclad 0.3-preview-91
+PACKAGE_STRING = gnuclad 0.2.3
 PACKAGE_TARNAME = gnuclad
 PACKAGE_URL = 
-PACKAGE_VERSION = 0.3-preview-91
+PACKAGE_VERSION = 0.2.3
 PATH_SEPARATOR = :
 SET_MAKE = 
 SHELL = /bin/bash
 STRIP = 
-VERSION = 0.3-preview-91
+VERSION = 0.2.3
 abs_builddir = /home/bryonak/c/gnuclad/bryonak/doc/src
 abs_srcdir = /home/bryonak/c/gnuclad/bryonak/doc/src
 abs_top_builddir = /home/bryonak/c/gnuclad/bryonak
