Added year interval code, showed implementation in example.conf

--- a/example/example.conf
+++ b/example/example.conf
@@ -36,6 +36,7 @@ orientation = 0
 treeMode = 0
 
 mainBackground = #fff
+rulerYearlabelWidth = 4
 rulerWidth = 2
 rulerColor = #ddd
 rulerMonthWidth = 1
@@ -56,4 +57,6 @@ derivType = 0
 dotRadius = 10
 smallDotRadius = 5
 
+yearLabelInterval = 3
 descriptionType = 1
+
