removed rulerYearlabelWidth and introduced rulerUnlabeledYearWidth to avoid breaking existing .conf files

--- a/example/example.conf
+++ b/example/example.conf
@@ -36,8 +36,8 @@ orientation = 0
 treeMode = 0
 
 mainBackground = #fff
-rulerYearlabelWidth = 4
-rulerWidth = 2
+rulerWidth = 4
+rulerUnlabeledYearWidth = 2
 rulerColor = #ddd
 rulerMonthWidth = 1
 rulerMonthColor = #eaeaea
