--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -93,7 +93,7 @@ AMTAR = tar
 AUTOCONF = autoconf
 AUTOHEADER = autoheader
 AUTOMAKE = automake-1.11
-AWK = gawk
+AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=none
 CFLAGS = -g -O2
@@ -123,15 +123,15 @@ OBJEXT = o
 PACKAGE = gnuclad
 PACKAGE_BUGREPORT = donjan at dyx dot ch
 PACKAGE_NAME = gnuclad
-PACKAGE_STRING = gnuclad 0.2.4
+PACKAGE_STRING = gnuclad rev-97
 PACKAGE_TARNAME = gnuclad
 PACKAGE_URL = 
-PACKAGE_VERSION = 0.2.4
+PACKAGE_VERSION = rev-97
 PATH_SEPARATOR = :
 SET_MAKE = 
 SHELL = /bin/bash
 STRIP = 
-VERSION = 0.2.4
+VERSION = rev-97
 abs_builddir = /home/bryonak/c/gnuclad/bryonak/doc/src
 abs_srcdir = /home/bryonak/c/gnuclad/bryonak/doc/src
 abs_top_builddir = /home/bryonak/c/gnuclad/bryonak
